--- a/package.json
+++ b/package.json
@@ -49,13 +49,16 @@
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^8.0.0",
+    "husky": "^8.0.1",
     "lint-staged": "^13.0.1",
-    "prettier": "^2.7.0"
+    "prettier": "^2.7.0",
+    "tsc-files": "^1.1.3"
   },
   "lint-staged": {
-    "**/*.{js,jsx}": [
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --max-warnings=0",
       "npm run lint",
+      "react-scripts test --bail --watchAll=false --findRelatedTests --passWithNoTests",
       "prettier --write"
     ]
   }
