--- a/package.json
+++ b/package.json
@@ -54,6 +54,11 @@
     "prettier": "^2.7.0",
     "tsc-files": "^1.1.3"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --max-warnings=0",
