--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.32.1",
     "react-redux": "^8.0.2",
@@ -65,7 +66,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --max-warnings=4",
+      "eslint --max-warnings=0",
       "npm run lint",
       "react-scripts test --bail --watchAll=false --findRelatedTests --passWithNoTests",
       "prettier --write"
